--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "react-typescript-starter-pack",
   "version": "0.1.0",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,8 +11,10 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
@@ -19,6 +22,8 @@
   },
   "scripts": {
     "lint": "eslint ./src --fix",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "fix-style": "npm run format && npm run lint",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,9 +50,11 @@
     ]
   },
   "devDependencies": {
-    "@mate-academy/eslint-config-react-typescript": "^0.0.4",
+    "@mate-academy/eslint-config-react-typescript": "^1.0.11",
+    "@types/lodash.debounce": "^4.0.7",
     "eslint": "^7.25.0",
     "gh-pages": "^3.1.0",
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "prettier": "2.8.8"
   }
 }
