--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "lodash.debounce": "^4.0.8",
+    "notiflix": "^3.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
